Sun Mar  3 03:40:07 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* Merged from ge-arc-branch
	
	* src/sp-ellipse.h (SPArc): New class

	* src/sp-ellipse.c (sp_arc_*): New methods

	* src/arc-context.c: New event context for SPArc. Mainly it is
	renamed from ellipse-context.c.
	So we should remove ellipse-context.c later.

	* src/arc-context.h: Ditto

	* glade/draw_arc.xpm: New pixmap file for draw arc tool.
	Now, we does not need draw_ellipse.xpm.

	* src/pixmaps/cursor-arc.xpm: Ditto

2002-02-25  Lauris Kaplinski  <lauris@ximian.com>

	* src/helper/curve.c (sp_curve_append): Do not requite non-empty curves

	* src/draw-context.c (fit_and_split): Commetn out boundary checks

	* src/document.c (sp_document_idle_handler): Bring up uncommited undo
	warning, if compiled with debug
	(sp_action_print_pending_list): Debug method
	(sp_document_warn_undo_stack): Ditto

	* src/document-private.h: Moved idel_id into base struct

2002-02-23  Lauris Kaplinski  <lauris@ximian.com>

	* src/helper/units.c (sp_points_get_units): New method
	(sp_units_get_points): Ditto

	* src/dialogs/object-properties.c: Made layout dynamic

	* src/document-undo.c (sp_document_private_done): New static method
	(sp_document_done): Just a wrapper
	(sp_document_maybe_done): Implement the real thing

	* src/document-private.h: Moved document definition here

2002-02-21  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/stroke-style.c (sp_stroke_style_any_toggled): Handle
	cap/join style changes
	(sp_stroke_style_widget_new): Create cap/join togglebuttons
	(sp_stroke_style_widget_update): Set cap/join selector activity
	(sp_stroke_style_set_join_buttons): New method
	(sp_stroke_style_set_cap_buttons): Ditto

2002-02-19  Lauris Kaplinski  <lauris@ximian.com>

	* src/dialogs/stroke-style.c: New file

	* src/dialogs/stroke-style.h: New file

	* src/helper/units.c (sp_distance_get_units): New method
	(sp_distance_get_points): Ditto

	* src/helper/units.h: Moved SPDistance here
